Update The Best Song System.ipynb

--- a/Source/The Best Song System.ipynb
+++ b/Source/The Best Song System.ipynb
@@ -1040,8 +1040,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TAG MERGE FUNCTION"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = []\n",
+    "\n",
+    "def find_multiple_value(arr, a): \n",
+    "    global data\n",
+    "    length = len(arr) \n",
+    "    for x in range(0,length-1):\n",
+    "        if List_06_26['USERID'][x] == a :\n",
+    "            for y in range(x+1,length): \n",
+    "                if List_06_26['TIME'][x] == List_06_26['TIME'][y]: \n",
+    "                    data.append(List_06_26['TIME'][x])\n",
+    "                    break \n",
+    "    return list(set(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
    "metadata": {
     "scrolled": false
    },
@@ -1050,39 +1077,122 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "1\n",
+      "['21:20', '8:20', '7:30', '17:25']\n",
+      "2\n",
+      "['8:10', '7:10', '17:25', '21:20', '19:30', '8:20', '7:30']\n",
+      "3\n",
+      "['8:10', '7:10', '17:25', '21:20', '19:30', '8:20', '7:30', '7:20', '20:00']\n",
+      "4\n",
+      "['8:10', '18:00', '8:35', '7:10', '17:25', '21:20', '19:30', '8:20', '7:30', '7:20', '20:00', '7:40']\n",
+      "5\n",
+      "['8:10', '18:00', '8:35', '7:10', '17:25', '21:20', '19:30', '8:20', '7:30', '7:20', '20:00', '6:30', '17:30', '22:40', '7:40']\n",
+      "6\n",
+      "['8:10', '18:00', '18:50', '8:35', '7:10', '17:25', '21:20', '0:30', '19:30', '8:20', '7:30', '7:20', '20:00', '6:30', '17:30', '22:40', '6:50', '6:10', '22:00', '7:40']\n"
      ]
     }
    ],
    "source": [
     "Merge_TAG = []\n",
-    "i=0\n",
-    "for a in List_06_26.USERID.index :\n",
+    "i = -1\n",
+    "\n",
+    "while i < len(User.USERID) :\n",
     "    i = i + 1\n",
-    "    if List_06_26['USERID'][a] == i :\n",
-    "        print(List_06_26['USERID'][a])"
+    "    for a in set(List_06_26['USERID']) :\n",
+    "        try :\n",
+    "            if a == User['USERID'][i] :\n",
+    "                print(a)\n",
+    "                Merge_TAG.append(find_multiple_value(List_06_26['TIME'], a))\n",
+    "                print(find_multiple_value(List_06_26['TIME'], a))\n",
+    "        except :\n",
+    "            pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 223,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21:20\n",
+      "8:20\n",
+      "7:30\n",
+      "17:25\n",
+      "8:10\n",
+      "7:10\n",
+      "17:25\n",
+      "21:20\n",
+      "19:30\n",
+      "8:20\n",
+      "7:30\n",
+      "8:10\n",
+      "7:10\n",
+      "17:25\n",
+      "21:20\n",
+      "19:30\n",
+      "8:20\n",
+      "7:30\n",
+      "7:20\n",
+      "20:00\n",
+      "8:10\n",
+      "18:00\n",
+      "8:35\n",
+      "7:10\n",
+      "17:25\n",
+      "21:20\n",
+      "19:30\n",
+      "8:20\n",
+      "7:30\n",
+      "7:20\n",
+      "20:00\n",
+      "7:40\n",
+      "8:10\n",
+      "18:00\n",
+      "8:35\n",
+      "7:10\n",
+      "17:25\n",
+      "21:20\n",
+      "19:30\n",
+      "8:20\n",
+      "7:30\n",
+      "7:20\n",
+      "20:00\n",
+      "6:30\n",
+      "17:30\n",
+      "22:40\n",
+      "7:40\n",
+      "8:10\n",
+      "18:00\n",
+      "18:50\n",
+      "8:35\n",
+      "7:10\n",
+      "17:25\n",
+      "21:20\n",
+      "0:30\n",
+      "19:30\n",
+      "8:20\n",
+      "7:30\n",
+      "7:20\n",
+      "20:00\n",
+      "6:30\n",
+      "17:30\n",
+      "22:40\n",
+      "6:50\n",
+      "6:10\n",
+      "22:00\n",
+      "7:40\n"
+     ]
     }
    ],
    "source": [
-    "Merge_TAG.count(1)"
+    "Day_TAG = []\n",
+    "for a in range(0, len(Merge_TAG)) :\n",
+    "    for b in range(0, len(Merge_TAG[a])) :\n",
+    "        if List_06_26['TIME'] == Merge_TAG[a][b] :\n",
+    "            print()"
    ]
   },
   {
